# joint_video_nlp

./: shotDetect.sh
C/textAlign/: .M.swp  .main.cpp.swp  .textAlign.cpp.swp  CMakeLists.txt  Makefile  README  a.txt  align  align.cpp  hocr2out  main.cpp  main2.cpp  textAlign.cpp  tvParser.cpp
C/textAlign/data/: Castle_1x01_-_Chapter_One.en.srt  Castle_1x01_-_Chapter_One.sent  script.txt  sub.txt  test.sent  test.srt  test2.sent  test2.srt  test3.sent  test3.srt  test4.srt  test5.srt  twin_peaks_221.srt  twin_peaks_221.txt  wordBasedAlignment.txt
C/textAlign/include/: .textAlign.hpp.swp  hocr.hpp  textAlign.hpp  tvParser.hpp  utils.hpp
C/textAlign/legacy/: Makefile.old.vig  old_align.cpp
C/textAlign/resutls/: Frasier_1x01.txt  Frasier_1x01.txt.dp  Frasier_1x01.txt.dp.l0d9  a1.txt  castle_reult.txt  test_frasier.txt  twin_peaks_reult.txt
C/textAlign/sampleData/: big_bang_2x04.wnt.xml
C/textAlign/sampleData/alignments/: big_bang_2x04.align  big_bang_2x04.align2  big_bang_2x04.align3  big_bang_2x04.wnt  filelist.txt
C/textAlign/sampleData/logs/: big_bang_2x04.log2  big_bang_2x04.log3
C/textAlign/sampleData/script/big_bang_theory_2x04/: page_01_hocr.html  page_02_hocr.html  page_03_hocr.html  page_04_hocr.html  page_05_hocr.html  page_06_hocr.html  page_07_hocr.html  page_08_hocr.html  page_09_hocr.html  page_10_hocr.html  page_11_hocr.html  page_12_hocr.html  page_13_hocr.html  page_14_hocr.html  page_15_hocr.html  page_16_hocr.html  page_17_hocr.html  page_18_hocr.html  page_19_hocr.html  page_20_hocr.html  page_21_hocr.html  page_22_hocr.html  page_23_hocr.html  page_24_hocr.html  page_25_hocr.html  page_26_hocr.html  page_27_hocr.html  page_28_hocr.html  page_29_hocr.html  page_30_hocr.html  page_31_hocr.html  page_32_hocr.html  page_33_hocr.html  page_34_hocr.html  page_35_hocr.html  page_36_hocr.html  page_37_hocr.html  page_38_hocr.html  page_39_hocr.html  page_40_hocr.html  (+2 more)
C/textAlign/sampleData/script/undeclared_1x01/: page_01_hocr.html  page_02_hocr.html  page_03_hocr.html  page_04_hocr.html  page_05_hocr.html  page_06_hocr.html  page_07_hocr.html  page_08_hocr.html  page_09_hocr.html  (+14 more)
C/textAlign/sampleData/srt/: big_bang_2x04.en.srt  undeclared_1x01.en.srt
C/textAlign/tmp/: temp  temp.cpp
(+189 files in other folders)
